--- a/supplier-react-app/package.json
+++ b/supplier-react-app/package.json
@@ -4,8 +4,8 @@
   "description": "A React application to manage suppliers.",
   "main": "index.js",
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "supplier-react-app": "file:"
   },
   "keywords": [],
   "author": "",
