--- a/supplier-api/src/main/resources/application.properties
+++ b/supplier-api/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+server.port=8081
