--- a/supplier-react-app/package.json
+++ b/supplier-react-app/package.json
@@ -4,7 +4,7 @@
   "description": "A React application to manage suppliers.",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "set PORT=3001 && set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
